# femtoldap

./: .containerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  Makefile  NEWS  README.md  config.toml
.github/workflows/: container-build.yml
integrations/: ldapsearch.sh
integrations/authelia/: Makefile  config.yml  flow.sh
integrations/forgejo/: Makefile  config.ini
src/: main.rs
src/commands/: mod.rs  server.rs
src/ldap/: acl.rs  attribute.rs  attributes.rs  database.rs  datatypes.rs  dn.rs  entry.rs  mod.rs  server.rs  traits.rs
src/ldap/config/: mod.rs  traits.rs
src/ldap/config/items/: app_accounts.rs  extra_properties.rs  groups.rs  login_properties.rs  mail_aliases.rs  mod.rs  root_dse.rs  users.rs
